feature: add action to install poetry.

--- a/.github/workflows/actions-test.yml
+++ b/.github/workflows/actions-test.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - name: install poetry
-        uses: actions/install-poetry
+        uses: actions/install-poetry.yml
       - name: Install dependencies
         run: poetry install --ansi
       - name: Linter run
