--- a/.github/workflows/actions-test.yml
+++ b/.github/workflows/actions-test.yml
@@ -15,6 +15,8 @@ jobs:
       - name: Install poetry
         run: pip install pip install poetry==1.1.13
       - name: Install dependencies
-        run: poetry install --ansi
+        run: poetry install
+        env:
+          POETRY_VIRTUALENVS_CREATE: false
       - name: Linter run
         run: flake8 ./src main.py
