--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -20,3 +20,25 @@ jobs:
           POETRY_VIRTUALENVS_CREATE: false
       - name: Linter run
         run: flake8 ./src main.py
+  publish:
+    runs-on: ubuntu-latest
+    needs: [linter]
+    steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          registry: cr.selcloud.ru/dkapust
+          username: ${{ secrets.SELECTEL_CR_USERNAME }}
+          password: ${{ secrets.SELECTEL_CR_PASSWORD }}
+      -
+        name: Build and push
+        uses: docker/build-push-action@v3
+        with:
+          push: true
+          tags: cartographer-sync:latest
+          file: ./dockerfiles/cartographer_sync.dockerfile
+          context: ./
