--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           POETRY_VIRTUALENVS_CREATE: false
       - name: Linter run
-        run: flake8 ./src ./main.py
+        run: flake8 ./src ./app.py
   publish:
     runs-on: ubuntu-latest
     needs: [linter]
