--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -34,11 +34,11 @@ jobs:
           registry: cr.selcloud.ru/dkapust
           username: ${{ secrets.SELECTEL_CR_USERNAME }}
           password: ${{ secrets.SELECTEL_CR_PASSWORD }}
-      -
-        name: Build and push
+      - run: ls
+      - name: Build and push
         uses: docker/build-push-action@v3
         with:
           push: true
           tags: cartographer-sync:latest
-          file: ./dockerfiles/cartographer_sync.dockerfile
-          context: ./
+          file: cartographerSync/dockerfiles/cartographer_sync.dockerfile
+          context: cartographerSync/
