feature: fix publish

--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -41,6 +41,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           push: true
+          load: cr.selcloud.ru/dkapust
           tags: cartographer-sync:latest
           file: ./dockerfiles/cartographer_sync.dockerfile
           context: ./
