--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "catrographersync"
 version = "0.1.0"
 description = ""
-authors = ["Takada <takada@nous.dev>"]
+authors = ["Dmitrii Kapustinskii <hunterelf1@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.10"
