--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -43,3 +43,21 @@ jobs:
           tags: cr.selcloud.ru/dkapust/cartographer-sync:develop
           file: ./dockerfiles/cartographer_sync.dockerfile
           context: ./
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [linter, publish]
+    steps:
+    - uses: actions/checkout@v1
+    - name: Deploy
+      uses: deliverybot/helm@v1
+      with:
+        release: cartographer-sync
+        namespace: stage01
+        chart: helm-chart/Chart.yaml
+        token: '${{ github.token }}'
+        value-files: >-
+        [
+          "helm-chart/values-stage01.yaml",
+        ]
+      env:
+        KUBECONFIG_FILE: '${{ secrets.KUBECONFIG }}'
