feature: fix deploy-develop.yml

--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -45,7 +45,7 @@ jobs:
           context: ./
   deploy:
     runs-on: ubuntu-latest
-    needs: [linter, publish]
+    needs: [publish]
     steps:
     - uses: actions/checkout@v1
     - name: Deploy
