--- a/.github/workflows/deploy-develop.yml
+++ b/.github/workflows/deploy-develop.yml
@@ -49,7 +49,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Deploy
-      uses: deliverybot/helm
+      uses: deliverybot/helm@v2
       with:
         release: cartographer-sync
         namespace: stage01
